2014-02-20  Albert Chu <chu11@llnl.gov>

	* libipmiconsole, ipmiconsole, common/parsecommon: Support
	SERIAL_ALERTS_DEFERRED workaround.

2014-02-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/ipmi-rmcpplus-support-and-payload-cmds-templates.h,
	libfreeipmi/cmds/ipmi-rmcpplus-support-and-payload-cmds.c: Fix
	payload, two fields were flipped by accident.  Make fields required and not optional.
	
2014-02-06  Albert Chu <chu11@llnl.gov>

	* Porting issues discovered by guy here

	http://theviewfrom8.blogspot.com/2012/11/how-to-build-freeipmi-on-mac-os-x.html

	basic code derived from his webpage.

	* libfreeipmi/driver/ipmi-semaphores.h: Union semun defined in
	sys/sem.h for FreeBSD and APPLE.
	
	* configure.ac, common/toolcommon/pstdout.c,
	common/toolcommon/tool-daemon-common.h: sighandler_t not defined
	in signal.h, handled appropriately.
	
2014-01-27  Anonymous

	* man/Makefile.am: Fix man pages built with cpp-4.8
	
2014-01-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/, libfreeipmi/include/freeipmi/spec/, Support
	OEM events for Intel Windmill motherboards in ipmi-sel.

	* freeipmi/record-format/ipmi-sel-oem-record-format.h: New file

	* libfreeipmi/include/freeipmi/util/ipmi-sensor-and-event-code-tables-util.h,
	libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_oem_sensor_type_message,
	ipmi_get_event_messages): Adjust API for new OEM sensors with non-standard config.

	* ipmi-sensors/, libipmimonitoring/: Adjust for changes in API.
	
2014-01-09  Albert Chu <chu11@llnl.gov>

	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
	Windmill.  Motherboard is Intel Windmill on all of them.
	
2014-01-08  Albert Chu <chu11@llnl.gov>

	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
	Windmill.  Motherboard in use was previously misidentified.
	
2014-01-07  Albert Chu <chu11@llnl.gov>

	Add DCMI configuration support in ipmi-config.

	* ipmi-config/: Add basic DCMI configuration support.
